--- a/src/app/demo/components/pages/blockchain/blockchain.component.html
+++ b/src/app/demo/components/pages/blockchain/blockchain.component.html
@@ -4,33 +4,43 @@
     <div class="card p-fluid">
       <h5>Connect MetamasK</h5>
       <div class="field grid">
-        <p-button 
-                label="{{ accountConnectedToBlockchain ? 'Connected' : 'Connect to MetaMask' }}" 
-                (onClick)="connectAndLoadData()" 
-                [ngClass]="{'p-button-success': accountConnectedToBlockchain}"
-            ></p-button>
+        <p-button label="{{ accountConnectedToBlockchain ? 'Connected' : 'Connect to MetaMask' }}"
+          (onClick)="connectAndLoadData()" [ngClass]="{'p-button-success': accountConnectedToBlockchain}"></p-button>
       </div>
       <div class="field grid">
         <p *ngIf="account">Account: {{ account }}</p>
-      </div>
-      <div class="field grid">
-        <p *ngIf="totalSupply">Total Supply: {{ totalSupply }}</p>
       </div>
     </div>
   </div>
 
   <div class="col-12 md:col-6">
-
-
     <div class="card p-fluid">
       <h5>Grid</h5>
       <div class="p-formgrid grid">
-
         <div class="field col">
-          <label htmlFor="name2">Name</label>
-          <input pInputText id="name2" type="text" />
+          <div class="field grid">
+            <p *ngIf="totalSupply">Total Supply: {{ totalSupply }}</p>
+          </div>
+          <div class="field grid">
+            <p-button (onClick)="loadTotalSupply()" label="totalSupply"></p-button>
+          </div>
         </div>
+      </div>
+    </div>
+  </div>
 
+  <div class="col-12 md:col-6">
+    <div class="card p-fluid">
+      <h5>Grid</h5>
+      <div class="p-formgrid grid">
+        <div class="field col">
+          <div class="field grid">
+            <p *ngIf="totalSupply">Total Supply: {{ totalSupply }}</p>
+          </div>
+          <div class="field grid">
+            <p-button (onClick)="loadTotalSupply()" label="totalSupply"></p-button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
